initial commit. scaffold folder structure. add .gitignore

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>NGS style guide boilerplate</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sg/style.css">
+    <link rel="stylesheet" href="css//ui-i/style-ui-i.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
